Version: $Id$ $Name$

purple (4/19/06)
----------------
+ Updated version to 5.4.0.0
+ Fixed opcodes for 4/19 live patch

purple (3/1/06)
---------------
+ Updated version to 5.3.1.0
+ Wired up new larger OP_Action to SpellShell so buffs cast by you are seen
+ Fixed light and gm in spawnStruct

purple (2/23/06)
----------------
+ Updated version to 5.3.0.0
+ Updated most opcodes for 2/21 live
+ Updated position structs for 2/21 live
+ Updated spawnStruct for 2/21 live. Missing light, gm still.
+ Updated zones.h for expansion
+ Regenerated races.h and staticspells.h for expansion
+ Fixed the Guild Member list so it parses correctly (fixes a crash when
	someone has an alt flag on in your guild)
+ Added Banker and Alt columns to Guild Window
+ Moved all actions taked on OP_ZoneEntry when from the server to be taken
	instead on OP_PlayerProfile. This is because the new auras seem to
	cause OP_ZoneEntry when you join a group that is effected by an
	aura. I'd imagine whatever OP_ZoneEntry really is, it is poorly named!
+ Made OP_BuffFadeMsg not shown on console if the message is zero length.
	This suppresses the constant wear off messages for auras.


purple (1/18/06)
-----------------
+ Updated version to 5.2.5.0
+ Split a lot of charProfileStruct out into playerProfileStruct
+ Added opcode OP_Shroud for when someone shrouds when you're in the zone
	or you shroud yourself
+ Added a SpawnShell handler for OP_Shroud so that it properly see 
	all the spawn changes when a spawn shrouds for both you shrouding
	and others shrouding
+ Added an ItemDB handler for OP_Shroud so that it properly sees items
	that come across when you shroud yourself
+ Fixed timestamps on the terminal to show up when you don't have
	a preference set for the timestamp format
+ Added session's max length to the network diagnostics window
+ Updated charProfileStruct for 1/18/2006 Live Compatibility

purple (12/08/05)
-----------------
+ Updated version to 5.2.4.0